--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -13,6 +13,10 @@
     display:flex;
     flex-direction: column;
 }
+.hashtags__nav{
+    display: flex;
+    flex-direction: column;
+}
 .welcome{
     padding: 10px;
 }
@@ -23,5 +27,11 @@
         min-width:1000px;
         margin: 15px auto;
     }
+
+}
+.author_line{
+    display: flex;
+    width: 30%;
+    align-items: center;
 
 }
