--- a/src/main/resources/templates/single-post-template.html
+++ b/src/main/resources/templates/single-post-template.html
@@ -24,11 +24,26 @@
                 <h3 class="post__topic-title main-content__topic-title"><a th:text="${post.topic.name}" th:href="'/topics/'+${post.topic.id}" class="main-content__topic-link post__topic-link">Topic</a>
                     </h3>
                 <h2 th:text="${post.title}" class="post__title main-content__topic-title">Post Title</h2>
+                    <div class="author_line">
+                        <p> written by: &nbsp;&nbsp;
+                        <h3 th:text="${post.author}" class="post__author main-content__topic-title">Post Author</h3>
+                        </p>
+                    </div>
+
+                <br>
                 <p th:text="${post.content}" class="post__content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque blanditiis, aut quae fuga id quis ut. 
                     Eligendi necessitatibus blanditiis officia, odio deleniti natus molestiae fugiat ex quod vel aliquam illum.
                 </p>
             </section>
         </main>
+        <br>
+        <br>
+
+        <form th:action="'/posts/' + ${post.id} + '/addHashtag'" method="post">
+            <label for="HashtagId">Enter Hashtag Here:</label>
+            <input type="text" name="hashtag" id="HashtagId">
+            <input type="submit">
+        </form>
     </div>
 
 </body>
