--- a/src/main/resources/templates/single-topic-template.html
+++ b/src/main/resources/templates/single-topic-template.html
@@ -32,6 +32,35 @@
             </nav>
         </section>
     </main>
+    <br>
+    <br>
+
+    <div class="new-post-form">
+        <h3>To Add a new post to this topic, complete the fields below.</h3>
+        <br>
+        <br>
+        <form th:action="'/topics/' + ${topic.id} + '/addPost'"  method="post">
+            <label for="PostTitle">Enter Post Title: &nbsp;</label>
+            <input type="text" name="title" id="PostTitle">
+            <br>
+            <br>
+            <label for="authorName">Enter author name: &nbsp;</label>
+            <input type="text" name="author" id="authorName">
+            <br>
+            <br>
+            <p><label for="postContent">Type your post here: &nbsp;</label></p>
+            <textarea name="content" id="postContent" cols="30" rows="10"></textarea>
+            <br>
+            <br>
+<!--            <label for="postHashtag">Enter a hashtag for your post: &nbsp;</label>-->
+<!--            <input type="text" th:field="*{hashtag}" id="postHashtag">-->
+            <br>
+            <br>
+            <input type="submit" value="Submit">
+        </form>
+    </div>
+
+
 </div>
 </body>
 
