--- a/src/main/resources/templates/all-hashtags-template.html
+++ b/src/main/resources/templates/all-hashtags-template.html
@@ -25,16 +25,17 @@
     <section class = "main-content__hashtags hashtags">
       <h2 class = "hashtags__title main-content__title">Hashtags</h2>
       <nav class="main-content__nav hashtags__nav">
-        <a th:each="hashtag: ${hashtags}" th:text="${hashtag.name}" th:href="'/hashtags/' +${hashtag.name}" href="#"
+        <a th:each="hashtag: ${hashtags}" th:text="'#' + ${hashtag.name}" th:href="'/hashtags/' +${hashtag.name}" href="#"
            class = "hashtags__nav-link"></a>
       </nav>
     </section>
   </main>
+  <div class="hashtag-form">
   <form action="/hashtags/addHashtag" method="post">
-    <label for="HashtagId">Enter New Hashtag Here:</label>
-    <input type="text" name="hashtag" id="HashtagId">
+    <input type="text" name="hashtag" id="HashtagId" placeholder="Enter new hashtag here:">
     <input type="submit">
   </form>
+  </div>
 </div>
 </body>
 </html>
