--- a/src/main/resources/templates/home-template.html
+++ b/src/main/resources/templates/home-template.html
@@ -26,10 +26,20 @@
             other side.</p>
         <section class="main-content__topics topics">
             <h2 class="topics__title main-content__title">Topics</h2>
+            <br>
             <nav class="main-content__nav topics__nav">
                 <a th:each="topic: ${topics}" th:text="${topic.name}" th:href="'/topics/'+${topic.id}" href="#"
                    class="topics__nav-link"></a>
+
             </nav>
+        </section>
+        <br>
+        <br>
+        <section class="add-new-topics">
+            <form th:action="'/topics/addTopic'" method="post">
+                <input type="text" name="topic" id="NewTopic" placeholder="Enter new topic">
+                <input type="submit">
+            </form>
         </section>
     </main>
     </div>
